--- a/ccMonitor/ccMonitor.csproj
+++ b/ccMonitor/ccMonitor.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>ccMonitor</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,17 +76,11 @@
     <Compile Include="Gui\AboutBox.Designer.cs">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Gui\BenchmarkOverview.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Gui\BenchmarkOverview.Designer.cs">
-      <DependentUpon>BenchmarkOverview.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Gui\GpuDetails.cs">
+    <Compile Include="Gui\BenchmarkDetails.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Gui\GpuDetails.Designer.cs">
-      <DependentUpon>GpuDetails.cs</DependentUpon>
+    <Compile Include="Gui\BenchmarkDetails.Designer.cs">
+      <DependentUpon>BenchmarkDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="Gui\GpuTab.cs">
       <SubType>UserControl</SubType>
@@ -111,11 +120,8 @@
     <EmbeddedResource Include="Gui\AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Gui\BenchmarkOverview.resx">
-      <DependentUpon>BenchmarkOverview.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Gui\GpuDetails.resx">
-      <DependentUpon>GpuDetails.cs</DependentUpon>
+    <EmbeddedResource Include="Gui\BenchmarkDetails.resx">
+      <DependentUpon>BenchmarkDetails.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gui\GpuTab.resx">
       <DependentUpon>GpuTab.cs</DependentUpon>
@@ -154,6 +160,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
