--- a/ccMonitor/ccMonitor.csproj
+++ b/ccMonitor/ccMonitor.csproj
@@ -47,8 +47,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -82,6 +83,12 @@
     <Compile Include="Gui\BenchmarkDetails.Designer.cs">
       <DependentUpon>BenchmarkDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gui\BenchmarkOverview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gui\BenchmarkOverview.Designer.cs">
+      <DependentUpon>BenchmarkOverview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gui\GpuTab.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -90,6 +97,12 @@
     </Compile>
     <Compile Include="GpuLogger.cs" />
     <Compile Include="Gui\GuiHelper.cs" />
+    <Compile Include="Gui\SensorChart.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Gui\SensorChart.Designer.cs">
+      <DependentUpon>SensorChart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gui\HashChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -129,8 +142,14 @@
     <EmbeddedResource Include="Gui\BenchmarkDetails.resx">
       <DependentUpon>BenchmarkDetails.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Gui\BenchmarkOverview.resx">
+      <DependentUpon>BenchmarkOverview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Gui\GpuTab.resx">
       <DependentUpon>GpuTab.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gui\SensorChart.resx">
+      <DependentUpon>SensorChart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gui\HashChart.resx">
       <DependentUpon>HashChart.cs</DependentUpon>
