--- a/ccMonitor/ccMonitor.csproj
+++ b/ccMonitor/ccMonitor.csproj
@@ -59,6 +59,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Data.DataSetExtensions" />
